--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>N'ayaez plus peur de refactorer vos API web</title>
+		<title>N'ayez plus peur de refactorer vos API web</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -33,9 +33,9 @@
 							<td style="text-align: center;"><h3>Yannick</h3></td>
 						</tr>
 						<tr>
-							<td><img src="images/novencia.jpg" height="60px"/></td>
+							<td style="text-align: center; vertical-align: middle;">Indépendant</td>
 							<td></td>
-							<td><img src="images/benext.png" height="60px"/></td>
+							<td style="text-align: center; vertical-align: middle;"><img src="images/sundayapp.png" height="60px"/></td>
 						</tr>
 						<tr>
 							<td><a href="https://twitter.com/maxime_gelle">@maxime_gelle</a></td>
